# Fastzien-Behandlung.jetzt

./: .env.example  .env.production  .gitignore  CNAME  Cargo.toml  Logo.avif  Start.avif  Start.heic  TEST.html  _headers  config.json  datenschutz.html  fonts.css  impressum.html  index (1).html  index.html  index_new.html  robots.txt  script.js  sitemap.xml  style.css
.claude/: settings.local.json
src/: auth.rs  caldav.rs  config.rs  db.rs  email.rs  main.rs
src/handlers/: admin_handler.rs  api.rs  auth_handler.rs  booking_handler.rs  calendar_handler.rs  customer_handler.rs  landing.rs  mod.rs  oauth_handler.rs
src/models/: appointment.rs  customer.rs  faq.rs  mod.rs  payment.rs  review.rs  settings.rs
static/css/: admin.css  auth.css  customer.css  main.css
static/js/: admin.js  booking.js  customer.js  main.js
templates/: base.html  landing.html
templates/admin/: appointments.html  customer_detail.html  customers.html  dashboard.html  faq_editor.html  payments.html  review_editor.html  settings.html  stats.html
templates/auth/: login.html  logout.html  register.html  reset_password.html  reset_password_confirm.html  verify_email_result.html
templates/customer/: appointments.html  book_appointment.html  credits.html  dashboard.html  email_not_verified.html  profile.html  waitlist.html
