[package]
name = "faszienbehandlung"
version = "1.0.0"
edition = "2021"
description = "Faszienbehandlung.jetzt - Booking & Management System"

[dependencies]
actix-web = "4"
actix-files = "0.6"
actix-rt = "2"
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
jsonwebtoken = "9"
bcrypt = "0.15"
lettre = { version = "0.11", features = ["tokio1-native-tls", "smtp-transport", "builder"] }
tera = "1"
dotenv = "0.15"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
log = "0.4"
env_logger = "0.11"
tokio = { version = "1", features = ["full"] }
actix-session = { version = "0.9", features = ["cookie-session"] }
reqwest = { version = "0.12", default-features = false, features = ["native-tls", "json"] }
urlencoding = "2"
